--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -43,7 +43,7 @@ li {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgb(63, 87, 179);
+    background-color: #3f57b3;
     z-index: 100;
 }
 
